# API/src/main/java/com/kbaje/eshop/dto/EditProductDto.java
@@ -1,8 +1,12 @@
 package com.kbaje.eshop.dto;
 
+import java.math.BigDecimal;
+
 public class EditProductDto {
     
     public String name;
     public String description;
+    public BigDecimal price;
+    public String imageUrl;
 
 }
