# Client/swagger.json
@@ -174,6 +174,33 @@
                 ]
             }
         },
+        "/api/checkout/postOrder": {
+            "post": {
+                "tags": [
+                    "Checkout"
+                ],
+                "summary": "Post order",
+                "description": "Post order",
+                "operationId": "postOrder",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CartDto"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/checkout/getCart": {
             "post": {
                 "tags": [
@@ -415,6 +442,12 @@
                         "type": "string"
                     },
                     "description": {
+                        "type": "string"
+                    },
+                    "price": {
+                        "type": "number"
+                    },
+                    "imageUrl": {
                         "type": "string"
                     }
                 }
